Updated the download page for relax 1.2.12.
This includes only the source releases as well as 64 bit GNU/Linux.

--- a/download.html
+++ b/download.html
@@ -70,7 +70,7 @@
     <div class="main_h2">
       <h2>General information</h2>
 
-      <p>The current stable release is relax version 1.2.11.</p>
+      <p>The current stable release is relax version 1.2.12.</p>
 
       <p>relax binaries have been pre-compiled for a number of computer architectures.  However if binaries for your system do not exist, please download the source release (the compilation of binaries is not a pre-requesite for using relax).  Note that some binary distribution files may not correspond to the most up to date version of relax.  If so, please download the up-to-date source release instead.  If you would like to contribute binary packages for your specific architecture, please read the 'Open source infrastructure' chapter of the relax manual for details.</p>
 
@@ -94,10 +94,10 @@
       <td><strong>File size (bytes)</strong></td>
     </tr>
     <tr>
-      <td><a href="http://download.gna.org/relax/relax-1.2.11.GNU-Linux.x86_64.tar.bz2" title="relax">relax-1.2.11.GNU-Linux.x86_64.tar.bz2</a></td>
-      <td><tt><small>54666d44b7efaf387690e9ee1625c272</small></tt></td>
-      <td><a href="http://download.gna.org/relax/relax-1.2.11.GNU-Linux.x86_64.tar.bz2.sig" title="relax GPG signature">signature</a></td>
-      <td>4278051</td>
+      <td><a href="http://download.gna.org/relax/relax-1.2.12.GNU-Linux.x86_64.tar.bz2" title="relax">relax-1.2.12.GNU-Linux.x86_64.tar.bz2</a></td>
+      <td><tt><small>da77dc1594bdbec2493cf47ad5987bf3</small></tt></td>
+      <td><a href="http://download.gna.org/relax/relax-1.2.12.GNU-Linux.x86_64.tar.bz2.sig" title="relax GPG signature">signature</a></td>
+      <td>4272262</td>
     </tr>
     <tr>
       <td><a href="http://download.gna.org/relax/relax-1.2.11.GNU-Linux.i686.tar.bz2" title="relax">relax-1.2.11.GNU-Linux.i686.tar.bz2</a></td>
@@ -187,18 +187,18 @@
     </tr>
     <tr><td>Bzip2 compressed TAR file</td></tr>
     <tr>
-      <td><a href="http://download.gna.org/relax/relax-1.2.11.src.tar.bz2" title="relax">relax-1.2.11.src.tar.bz2</a></td>
-      <td><tt><small>67909c5734c77ab6635408e3b084333b</small></tt></td>
-      <td><a href="http://download.gna.org/relax/relax-1.2.11.src.tar.bz2.sig" title="relax GPG signature">signature</a></td>
-      <td>4271529</td>
+      <td><a href="http://download.gna.org/relax/relax-1.2.12.src.tar.bz2" title="relax">relax-1.2.12.src.tar.bz2</a></td>
+      <td><tt><small>dab798ceecf95f0ca8807d70d744ef9a</small></tt></td>
+      <td><a href="http://download.gna.org/relax/relax-1.2.12.src.tar.bz2.sig" title="relax GPG signature">signature</a></td>
+      <td>4265898</td>
     </tr>
 
     <tr><td>Zip file</td></tr>
     <tr>
-      <td><a href="http://download.gna.org/relax/relax-1.2.11.src.zip" title="relax">relax-1.2.11.src.zip</a></td>
-      <td><tt><small>ff5647b89dbd89f2997bf02b444fc08c</small></tt></td>
-      <td><a href="http://download.gna.org/relax/relax-1.2.11.src.zip.sig" title="relax GPG signature">signature</a></td>
-      <td>4543086</td>
+      <td><a href="http://download.gna.org/relax/relax-1.2.12.src.zip" title="relax">relax-1.2.12.src.zip</a></td>
+      <td><tt><small>13e4a07fd89d18161c3c9ea30d388bf2</small></tt></td>
+      <td><a href="http://download.gna.org/relax/relax-1.2.12.src.zip.sig" title="relax GPG signature">signature</a></td>
+      <td>4537636</td>
     </tr>
   </tbody>
 </table>
@@ -273,10 +273,10 @@
       <td>4263999</td>
     </tr>
     <tr>
-      <td><a href="http://download.gna.org/relax/relax-1.2.11.GNU-Linux.x86_64.tar.bz2" title="relax">relax-1.2.11.GNU-Linux.x86_64.tar.bz2</a></td>
-      <td><tt><small>54666d44b7efaf387690e9ee1625c272</small></tt></td>
-      <td><a href="http://download.gna.org/relax/relax-1.2.11.GNU-Linux.x86_64.tar.bz2.sig" title="relax GPG signature">signature</a></td>
-      <td>4278051</td>
+      <td><a href="http://download.gna.org/relax/relax-1.2.12.GNU-Linux.x86_64.tar.bz2" title="relax">relax-1.2.12.GNU-Linux.x86_64.tar.bz2</a></td>
+      <td><tt><small>da77dc1594bdbec2493cf47ad5987bf3</small></tt></td>
+      <td><a href="http://download.gna.org/relax/relax-1.2.12.GNU-Linux.x86_64.tar.bz2.sig" title="relax GPG signature">signature</a></td>
+      <td>4272262</td>
     </tr>
     <tr>
       <td><a href="http://download.gna.org/relax/relax-1.2.11.Win32.zip" title="relax">relax-1.2.11.Win32.zip</a></td>
@@ -285,16 +285,16 @@
       <td>4525219</td>
     </tr>
     <tr>
-      <td><a href="http://download.gna.org/relax/relax-1.2.11.src.tar.bz2" title="relax">relax-1.2.11.src.tar.bz2</a></td>
-      <td><tt><small>67909c5734c77ab6635408e3b084333b</small></tt></td>
-      <td><a href="http://download.gna.org/relax/relax-1.2.11.src.tar.bz2.sig" title="relax GPG signature">signature</a></td>
-      <td>4271529</td>
+      <td><a href="http://download.gna.org/relax/relax-1.2.12.src.tar.bz2" title="relax">relax-1.2.12.src.tar.bz2</a></td>
+      <td><tt><small>dab798ceecf95f0ca8807d70d744ef9a</small></tt></td>
+      <td><a href="http://download.gna.org/relax/relax-1.2.12.src.tar.bz2.sig" title="relax GPG signature">signature</a></td>
+      <td>4265898</td>
     </tr>
     <tr>
-      <td><a href="http://download.gna.org/relax/relax-1.2.11.src.zip" title="relax">relax-1.2.11.src.zip</a></td>
-      <td><tt><small>ff5647b89dbd89f2997bf02b444fc08c</small></tt></td>
-      <td><a href="http://download.gna.org/relax/relax-1.2.11.src.zip.sig" title="relax GPG signature">signature</a></td>
-      <td>4543086</td>
+      <td><a href="http://download.gna.org/relax/relax-1.2.12.src.zip" title="relax">relax-1.2.12.src.zip</a></td>
+      <td><tt><small>13e4a07fd89d18161c3c9ea30d388bf2</small></tt></td>
+      <td><a href="http://download.gna.org/relax/relax-1.2.12.src.zip.sig" title="relax GPG signature">signature</a></td>
+      <td>4537636</td>
     </tr>
   </tbody>
 </table>
@@ -378,6 +378,26 @@
       <td><strong>MD5 checksum</strong></td>
       <td><strong>GPG signature</strong></td>
       <td><strong>File size (bytes)</strong></td>
+    </tr>
+
+    <tr><td><em>Version 1.2.12</em></td></tr>
+    <tr>
+      <td><a href="http://download.gna.org/relax/relax-1.2.12.GNU-Linux.x86_64.tar.bz2" title="relax">relax-1.2.12.GNU-Linux.x86_64.tar.bz2</a></td>
+      <td><tt><small>da77dc1594bdbec2493cf47ad5987bf3</small></tt></td>
+      <td><a href="http://download.gna.org/relax/relax-1.2.12.GNU-Linux.x86_64.tar.bz2.sig" title="relax GPG signature">signature</a></td>
+      <td>4272262</td>
+    </tr>
+    <tr>
+      <td><a href="http://download.gna.org/relax/relax-1.2.12.src.tar.bz2" title="relax">relax-1.2.12.src.tar.bz2</a></td>
+      <td><tt><small>dab798ceecf95f0ca8807d70d744ef9a</small></tt></td>
+      <td><a href="http://download.gna.org/relax/relax-1.2.12.src.tar.bz2.sig" title="relax GPG signature">signature</a></td>
+      <td>4265898</td>
+    </tr>
+    <tr>
+      <td><a href="http://download.gna.org/relax/relax-1.2.12.src.zip" title="relax">relax-1.2.12.src.zip</a></td>
+      <td><tt><small>13e4a07fd89d18161c3c9ea30d388bf2</small></tt></td>
+      <td><a href="http://download.gna.org/relax/relax-1.2.12.src.zip.sig" title="relax GPG signature">signature</a></td>
+      <td>4537636</td>
     </tr>
 
     <tr><td><em>Version 1.2.11</em></td></tr>
