Improved the reference page layout.

--- a/refs.html
+++ b/refs.html
@@ -63,25 +63,25 @@
 <div class="main">
  <div class="main_box">
   <h1>References</h1>
-   <ul>
-    <li id="Clore90">Clore, G. M., Szabo, A., Bax, A., Kay, L. E., Driscoll, P. C., and Gronenborn, A. M. (1990b). Deviations from the simple 2-parameter model-free approach to the interpretation of N-15 nuclear magnetic-relaxation of proteins. <em>J. Am. Chem. Soc.</em>, <strong>112</strong>(12), 4989–4991.</li>
+   <ul class="ref_ul">
+    <li class="ref_li" id="Clore90">Clore, G. M., Szabo, A., Bax, A., Kay, L. E., Driscoll, P. C., and Gronenborn, A. M. (1990b). Deviations from the simple 2-parameter model-free approach to the interpretation of N-15 nuclear magnetic-relaxation of proteins. <em>J. Am. Chem. Soc.</em>, <strong>112</strong>(12), 4989–4991.</li>
 
-    <li id="dAuvergneGooley03">d'Auvergne, E. J. and Gooley, P. R. (2003). The use of model selection in the
+    <li class="ref_li" id="dAuvergneGooley03">d'Auvergne, E. J. and Gooley, P. R. (2003). The use of model selection in the
 model-free analysis of protein dynamics. <em>J. Biomol. NMR</em>, <strong>25</strong>(1), 25–39. (<a href="http://www.springerlink.com/content/g15p85235225v865/">abstract</a>)</li>
 
-    <li id="dAuvergneGooley06">d'Auvergne, E. J. and Gooley, P. R. (2006). Model-free model elimination: A new step in the model-free dynamic analysis of NMR relaxation data. <em>J. Biomol. NMR</em>, <strong>35</strong>(2), 117–135. (<a href="http://www.springerlink.com/content/lpr22t6704141464/">abstract</a>)</li>
+    <li class="ref_li" id="dAuvergneGooley06">d'Auvergne, E. J. and Gooley, P. R. (2006). Model-free model elimination: A new step in the model-free dynamic analysis of NMR relaxation data. <em>J. Biomol. NMR</em>, <strong>35</strong>(2), 117–135. (<a href="http://www.springerlink.com/content/lpr22t6704141464/">abstract</a>)</li>
 
-    <li id="Farrow95">Farrow, N. A., Zhang, O., Forman-Kay, J. D., Kay, L. E. (1995).  Comparison of the backbone dynamics of a folded and an unfolded SH3 domain existing in equilibrium in aqueous buffer. <em>Biochem.</em>, <strong>34</strong>(3), 868-878.</li>
+    <li class="ref_li" id="Farrow95">Farrow, N. A., Zhang, O., Forman-Kay, J. D., Kay, L. E. (1995).  Comparison of the backbone dynamics of a folded and an unfolded SH3 domain existing in equilibrium in aqueous buffer. <em>Biochem.</em>, <strong>34</strong>(3), 868-878.</li>
 
-    <li id="Lefevre96">Lefevre, J. F., Dayie, K. T., Peng, J. W., and Wagner, G. (1996). Internal mobility in the partially folded DNA binding and dimerization domains of GAL4: NMR analysis of the N-H spectral density functions. <em>Biochem.</em>, <strong>35</strong>(8), 2674–2686.</li>
+    <li class="ref_li" id="Lefevre96">Lefevre, J. F., Dayie, K. T., Peng, J. W., and Wagner, G. (1996). Internal mobility in the partially folded DNA binding and dimerization domains of GAL4: NMR analysis of the N-H spectral density functions. <em>Biochem.</em>, <strong>35</strong>(8), 2674–2686.</li>
 
-    <li id="LipariSzabo82a">Lipari, G. and Szabo, A. (1982a). Model-free approach to the interpretation of nuclear magnetic-resonance relaxation in macromolecules I. Theory and range of validity. <em>J. Am. Chem. Soc.</em>, <strong>104</strong>(17), 4546–4559.</li>
+    <li class="ref_li" id="LipariSzabo82a">Lipari, G. and Szabo, A. (1982a). Model-free approach to the interpretation of nuclear magnetic-resonance relaxation in macromolecules I. Theory and range of validity. <em>J. Am. Chem. Soc.</em>, <strong>104</strong>(17), 4546–4559.</li>
 
-    <li id="LipariSzabo82b">Lipari, G. and Szabo, A. (1982b). Model-free approach to the interpretation of nuclear magnetic-resonance relaxation in macromolecules II. Analysis of experimental results. <em>J. Am. Chem. Soc.</em>, <strong>104</strong>(17), 4559–4570.</li>
+    <li class="ref_li" id="LipariSzabo82b">Lipari, G. and Szabo, A. (1982b). Model-free approach to the interpretation of nuclear magnetic-resonance relaxation in macromolecules II. Analysis of experimental results. <em>J. Am. Chem. Soc.</em>, <strong>104</strong>(17), 4559–4570.</li>
 
-    <li id="Mandel95">Mandel, A. M., Akke, M., and Palmer, 3rd, A. G. (1995). Backbone dynamics of Escherichia coli ribonuclease HI: correlations with structure and function in an active enzyme. <em>J. Mol. Biol.</em>, <strong>246</strong>(1), 144–163.</li>
+    <li class="ref_li" id="Mandel95">Mandel, A. M., Akke, M., and Palmer, 3rd, A. G. (1995). Backbone dynamics of Escherichia coli ribonuclease HI: correlations with structure and function in an active enzyme. <em>J. Mol. Biol.</em>, <strong>246</strong>(1), 144–163.</li>
 
-    <li id="Tugarinov01">Tugarinov, V., Liang, Z., Shapiro, Y. E., Freed, J. H., and Meirovitch, E. (2001). A structural mode-coupling approach to <sup>15</sup>N NMR relaxation in proteins. <em>J. Am. Chem. Soc.</em>, <strong>123</strong>(13), 3055–3063.</li>
+    <li class="ref_li" id="Tugarinov01">Tugarinov, V., Liang, Z., Shapiro, Y. E., Freed, J. H., and Meirovitch, E. (2001). A structural mode-coupling approach to <sup>15</sup>N NMR relaxation in proteins. <em>J. Am. Chem. Soc.</em>, <strong>123</strong>(13), 3055–3063.</li>
    </ul>
 
  </div>
