--- a/refs.html
+++ b/refs.html
@@ -71,6 +71,8 @@ model-free analysis of protein dynamics. <em>J. Biomol. NMR</em>, <strong>25</st
 
     <li class="ref_li" id="dAuvergneGooley06">d'Auvergne, E. J. and Gooley, P. R. (2006). Model-free model elimination: A new step in the model-free dynamic analysis of NMR relaxation data. <em>J. Biomol. NMR</em>, <strong>35</strong>(2), 117–135. (<a href="http://www.springerlink.com/content/lpr22t6704141464/">abstract</a>)</li>
 
+    <li class="ref_li" id="dAuvergneGooley07">d'Auvergne E. J., Gooley P. R. (2007). Set theory formulation of the model-free problem and the diffusion seeded model-free paradigm. <em>Mol. Biosyst.</em> <strong>3</strong>(7), 483-494.  (<a href="http://www.rsc.org/publishing/journals/MB/article.asp?doi=b702202f">abstract</a>)</li>
+
     <li class="ref_li" id="Farrow95">Farrow, N. A., Zhang, O., Forman-Kay, J. D., Kay, L. E. (1995).  Comparison of the backbone dynamics of a folded and an unfolded SH3 domain existing in equilibrium in aqueous buffer. <em>Biochem.</em>, <strong>34</strong>(3), 868-878.</li>
 
     <li class="ref_li" id="Lefevre96">Lefevre, J. F., Dayie, K. T., Peng, J. W., and Wagner, G. (1996). Internal mobility in the partially folded DNA binding and dimerization domains of GAL4: NMR analysis of the N-H spectral density functions. <em>Biochem.</em>, <strong>35</strong>(8), 2674–2686.</li>
