Added the Horne et al, 2007 reference.

--- a/refs.html
+++ b/refs.html
@@ -75,6 +75,8 @@ model-free analysis of protein dynamics. <em>J. Biomol. NMR</em>, <strong>25</st
 
     <li class="ref_li" id="Farrow95">Farrow, N. A., Zhang, O., Forman-Kay, J. D., Kay, L. E. (1995).  Comparison of the backbone dynamics of a folded and an unfolded SH3 domain existing in equilibrium in aqueous buffer. <em>Biochem.</em>, <strong>34</strong>(3), 868-878.</li>
 
+    <li class="ref_li" id="Horne07">Horne J., d'Auvergne E. J., Coles M., Velkov T., Chin Y., Charman W. N., Prankerd R., Gooley P. R., Scanlon M. J. (2007).  Probing the flexibility of the DsbA oxidoreductase from <em>Vibrio cholerae</em> - a <sup>15</sup>N-<sup>1</sup>H heteronuclear NMR relaxation analysis of oxidized and reduced forms of DsbA. <em>J. Mol. Biol.</em>, <strong>371</strong>(3), 703-716.  (<a href="http://dx.doi.org/10.1016/j.jmb.2007.05.067">abstract</a>)</li>
+
     <li class="ref_li" id="Lefevre96">Lefevre, J. F., Dayie, K. T., Peng, J. W., and Wagner, G. (1996). Internal mobility in the partially folded DNA binding and dimerization domains of GAL4: NMR analysis of the N-H spectral density functions. <em>Biochem.</em>, <strong>35</strong>(8), 2674–2686.</li>
 
     <li class="ref_li" id="LipariSzabo82a">Lipari, G. and Szabo, A. (1982a). Model-free approach to the interpretation of nuclear magnetic-resonance relaxation in macromolecules I. Theory and range of validity. <em>J. Am. Chem. Soc.</em>, <strong>104</strong>(17), 4546–4559.</li>
