--- a/refs.html
+++ b/refs.html
@@ -67,11 +67,11 @@
     <li class="ref_li" id="Clore90">Clore, G. M., Szabo, A., Bax, A., Kay, L. E., Driscoll, P. C., and Gronenborn, A. M. (1990b). Deviations from the simple 2-parameter model-free approach to the interpretation of N-15 nuclear magnetic-relaxation of proteins. <em>J. Am. Chem. Soc.</em>, <strong>112</strong>(12), 4989–4991.</li>
 
     <li class="ref_li" id="dAuvergneGooley03">d'Auvergne, E. J. and Gooley, P. R. (2003). The use of model selection in the
-model-free analysis of protein dynamics. <em>J. Biomol. NMR</em>, <strong>25</strong>(1), 25–39. (<a href="http://www.springerlink.com/content/g15p85235225v865/">abstract</a>)</li>
+model-free analysis of protein dynamics. <em>J. Biomol. NMR</em>, <strong>25</strong>(1), 25–39. (<a href="http://dx.doi.org/10.1023/A:1021902006114">abstract</a>)</li>
 
-    <li class="ref_li" id="dAuvergneGooley06">d'Auvergne, E. J. and Gooley, P. R. (2006). Model-free model elimination: A new step in the model-free dynamic analysis of NMR relaxation data. <em>J. Biomol. NMR</em>, <strong>35</strong>(2), 117–135. (<a href="http://www.springerlink.com/content/lpr22t6704141464/">abstract</a>)</li>
+    <li class="ref_li" id="dAuvergneGooley06">d'Auvergne, E. J. and Gooley, P. R. (2006). Model-free model elimination: A new step in the model-free dynamic analysis of NMR relaxation data. <em>J. Biomol. NMR</em>, <strong>35</strong>(2), 117–135. (<a href="http://dx.doi.org/10.1007/s10858-006-9007-z">abstract</a>)</li>
 
-    <li class="ref_li" id="dAuvergneGooley07">d'Auvergne E. J., Gooley P. R. (2007). Set theory formulation of the model-free problem and the diffusion seeded model-free paradigm. <em>Mol. Biosyst.</em> <strong>3</strong>(7), 483-494.  (<a href="http://www.rsc.org/publishing/journals/MB/article.asp?doi=b702202f">abstract</a>)</li>
+    <li class="ref_li" id="dAuvergneGooley07">d'Auvergne E. J., Gooley P. R. (2007). Set theory formulation of the model-free problem and the diffusion seeded model-free paradigm. <em>Mol. Biosyst.</em> <strong>3</strong>(7), 483-494.  (<a href="dx.doi.org/10.1039/b702202f">abstract</a>)</li>
 
     <li class="ref_li" id="Farrow95">Farrow, N. A., Zhang, O., Forman-Kay, J. D., Kay, L. E. (1995).  Comparison of the backbone dynamics of a folded and an unfolded SH3 domain existing in equilibrium in aqueous buffer. <em>Biochem.</em>, <strong>34</strong>(3), 868-878.</li>
 
