--- a/refs.html
+++ b/refs.html
@@ -73,6 +73,10 @@ model-free analysis of protein dynamics. <em>J. Biomol. NMR</em>, <strong>25</st
 
     <li class="ref_li" id="dAuvergneGooley07">d'Auvergne E. J., Gooley P. R. (2007). Set theory formulation of the model-free problem and the diffusion seeded model-free paradigm. <em>Mol. Biosyst.</em> <strong>3</strong>(7), 483-494.  (<a href="dx.doi.org/10.1039/b702202f">abstract</a>)</li>
 
+    <li class="ref_li" id="dAuvergneGooley08a">d'Auvergne, E. J. and Gooley, P. R. (2008).  Optimisation of NMR dynamic models I.  Minimisation algorithms and their performance within the model-free and Brownian rotational diffusion spaces. <em>J. Biomol. NMR</em>, <strong>40</strong>(2), 107-119. (<a href="http://dx.doi.org/10.1007/s10858-007-9214-2">abstract</a>)</li>
+
+    <li class="ref_li" id="dAuvergneGooley08b">d'Auvergne, E. J. and Gooley, P. R. (2008).  Optimisation of NMR dynamic models II.  A new methodology for the dual optimisation of the model-free parameters and the Brownian rotational diffusion tensor. <em>J. Biomol. NMR</em>, <strong>40</strong>(2), 121-133. (<a href="http://dx.doi.org/10.1007/s10858-007-9213-3">abstract</a>)</li>
+
     <li class="ref_li" id="Farrow95">Farrow, N. A., Zhang, O., Forman-Kay, J. D., Kay, L. E. (1995).  Comparison of the backbone dynamics of a folded and an unfolded SH3 domain existing in equilibrium in aqueous buffer. <em>Biochem.</em>, <strong>34</strong>(3), 868-878.</li>
 
     <li class="ref_li" id="Horne07">Horne J., d'Auvergne E. J., Coles M., Velkov T., Chin Y., Charman W. N., Prankerd R., Gooley P. R., Scanlon M. J. (2007).  Probing the flexibility of the DsbA oxidoreductase from <em>Vibrio cholerae</em> - a <sup>15</sup>N-<sup>1</sup>H heteronuclear NMR relaxation analysis of oxidized and reduced forms of DsbA. <em>J. Mol. Biol.</em>, <strong>371</strong>(3), 703-716.  (<a href="http://dx.doi.org/10.1016/j.jmb.2007.05.067">abstract</a>)</li>
