--- a/refs.html
+++ b/refs.html
@@ -71,7 +71,7 @@ model-free analysis of protein dynamics. <em>J. Biomol. NMR</em>, <strong>25</st
 
     <li class="ref_li" id="dAuvergneGooley06">d'Auvergne, E. J. and Gooley, P. R. (2006). Model-free model elimination: A new step in the model-free dynamic analysis of NMR relaxation data. <em>J. Biomol. NMR</em>, <strong>35</strong>(2), 117–135. (<a href="http://dx.doi.org/10.1007/s10858-006-9007-z">abstract</a>)</li>
 
-    <li class="ref_li" id="dAuvergneGooley07">d'Auvergne E. J., Gooley P. R. (2007). Set theory formulation of the model-free problem and the diffusion seeded model-free paradigm. <em>Mol. Biosyst.</em> <strong>3</strong>(7), 483-494.  (<a href="dx.doi.org/10.1039/b702202f">abstract</a>)</li>
+    <li class="ref_li" id="dAuvergneGooley07">d'Auvergne E. J., Gooley P. R. (2007). Set theory formulation of the model-free problem and the diffusion seeded model-free paradigm. <em>Mol. Biosyst.</em>, <strong>3</strong>(7), 483-494.  (<a href="dx.doi.org/10.1039/b702202f">abstract</a>)</li>
 
     <li class="ref_li" id="dAuvergneGooley08a">d'Auvergne, E. J. and Gooley, P. R. (2008).  Optimisation of NMR dynamic models I.  Minimisation algorithms and their performance within the model-free and Brownian rotational diffusion spaces. <em>J. Biomol. NMR</em>, <strong>40</strong>(2), 107-119. (<a href="http://dx.doi.org/10.1007/s10858-007-9214-2">abstract</a>)</li>
 
