Correct formatting of species name (italics).

--- a/refs.html
+++ b/refs.html
@@ -89,7 +89,7 @@ model-free analysis of protein dynamics. <em>J. Biomol. NMR</em>, <strong>25</st
 
     <li class="ref_li" id="LipariSzabo82b">Lipari, G. and Szabo, A. (1982b).  Model-free approach to the interpretation of nuclear magnetic-resonance relaxation in macromolecules II. Analysis of experimental results. <em>J. Am. Chem. Soc.</em>, <strong>104</strong>(17), 4559–4570.</li>
 
-    <li class="ref_li" id="Mandel95">Mandel, A. M., Akke, M., and Palmer, 3rd, A. G. (1995).  Backbone dynamics of Escherichia coli ribonuclease HI: correlations with structure and function in an active enzyme. <em>J. Mol. Biol.</em>, <strong>246</strong>(1), 144–163.</li>
+    <li class="ref_li" id="Mandel95">Mandel, A. M., Akke, M., and Palmer, 3rd, A. G. (1995).  Backbone dynamics of <em>Escherichia coli</em> ribonuclease HI: correlations with structure and function in an active enzyme. <em>J. Mol. Biol.</em>, <strong>246</strong>(1), 144–163.</li>
 
     <li class="ref_li" id="Tugarinov01">Tugarinov, V., Liang, Z., Shapiro, Y. E., Freed, J. H., and Meirovitch, E. (2001).  A structural mode-coupling approach to <sup>15</sup>N NMR relaxation in proteins. <em>J. Am. Chem. Soc.</em>, <strong>123</strong>(13), 3055–3063.</li>
    </ul>
