Added the Chen et al, 2004 reference.

--- a/refs.html
+++ b/refs.html
@@ -64,12 +64,13 @@
  <div class="main_box">
   <h1>References</h1>
    <ul class="ref_ul">
+    <li class="ref_li" id="Chen04"> Chen, J., Brooks, 3rd, C. L., and Wright, P. E. (2004).  Model-free analysis of protein dynamics: assessment of accuracy and model selection protocols based on molecular dynamics simulation. <em>J. Biomol. NMR</em>, <strong>29</strong>(3), 243-257.</li>
+
     <li class="ref_li" id="Clore90">Clore, G. M., Szabo, A., Bax, A., Kay, L. E., Driscoll, P. C., and Gronenborn, A. M. (1990b).  Deviations from the simple 2-parameter model-free approach to the interpretation of N-15 nuclear magnetic-relaxation of proteins. <em>J. Am. Chem. Soc.</em>, <strong>112</strong>(12), 4989–4991.</li>
 
     <li class="ref_li" id="dAuvergne06">d'Auvergne, E. J. (2006).   Protein dynamics: a study of the model-free analysis of NMR relaxation data. (<a href="http://eprints.infodiv.unimelb.edu.au/archive/00002799/">abstract</a>, <a href="http://eprints.infodiv.unimelb.edu.au/archive/00002799/01/thesis.pdf">PDF</a>)</li>
 
-    <li class="ref_li" id="dAuvergneGooley03">d'Auvergne, E. J. and Gooley, P. R. (2003).  The use of model selection in the
-model-free analysis of protein dynamics. <em>J. Biomol. NMR</em>, <strong>25</strong>(1), 25–39. (<a href="http://dx.doi.org/10.1023/A:1021902006114">abstract</a>)</li>
+    <li class="ref_li" id="dAuvergneGooley03">d'Auvergne, E. J. and Gooley, P. R. (2003).  The use of model selection in the model-free analysis of protein dynamics. <em>J. Biomol. NMR</em>, <strong>25</strong>(1), 25–39. (<a href="http://dx.doi.org/10.1023/A:1021902006114">abstract</a>)</li>
 
     <li class="ref_li" id="dAuvergneGooley06">d'Auvergne, E. J. and Gooley, P. R. (2006).  Model-free model elimination:  A new step in the model-free dynamic analysis of NMR relaxation data. <em>J. Biomol. NMR</em>, <strong>35</strong>(2), 117–135. (<a href="http://dx.doi.org/10.1007/s10858-006-9007-z">abstract</a>)</li>
 
