Updated the download page for relax version 1.2.13.

--- a/download.html
+++ b/download.html
@@ -71,7 +71,7 @@
     <div class="main_h2">
       <h2>General information</h2>
 
-      <p>The current stable release is relax version 1.2.12.</p>
+      <p>The current stable release is relax version 1.2.13.</p>
 
       <p>relax binaries have been pre-compiled for a number of computer architectures.  However if binaries for your system do not exist, please download the source release (the compilation of binaries is not a pre-requesite for using relax).  Note that some binary distribution files may not correspond to the most up to date version of relax.  If so, please download the up-to-date source release instead.  If you would like to contribute binary packages for your specific architecture, please read the 'Open source infrastructure' chapter of the relax manual for details.</p>
 
@@ -95,10 +95,10 @@
       <td><strong>File size (bytes)</strong></td>
     </tr>
     <tr>
-      <td><a href="http://download.gna.org/relax/relax-1.2.12.GNU-Linux.x86_64.tar.bz2" title="relax">relax-1.2.12.GNU-Linux.x86_64.tar.bz2</a></td>
-      <td><tt><small>da77dc1594bdbec2493cf47ad5987bf3</small></tt></td>
-      <td><a href="http://download.gna.org/relax/relax-1.2.12.GNU-Linux.x86_64.tar.bz2.sig" title="relax GPG signature">signature</a></td>
-      <td>4272262</td>
+      <td><a href="http://download.gna.org/relax/relax-1.2.13.GNU-Linux.x86_64.tar.bz2" title="relax">relax-1.2.13.GNU-Linux.x86_64.tar.bz2</a></td>
+      <td><tt><small>946367dd9cc9696ffe0b579dafd6256f</small></tt></td>
+      <td><a href="http://download.gna.org/relax/relax-1.2.13.GNU-Linux.x86_64.tar.bz2.sig" title="relax GPG signature">signature</a></td>
+      <td>4291587</td>
     </tr>
     <tr>
       <td><a href="http://download.gna.org/relax/relax-1.2.11.GNU-Linux.i686.tar.bz2" title="relax">relax-1.2.11.GNU-Linux.i686.tar.bz2</a></td>
@@ -188,18 +188,18 @@
     </tr>
     <tr><td>Bzip2 compressed TAR file</td></tr>
     <tr>
-      <td><a href="http://download.gna.org/relax/relax-1.2.12.src.tar.bz2" title="relax">relax-1.2.12.src.tar.bz2</a></td>
-      <td><tt><small>dab798ceecf95f0ca8807d70d744ef9a</small></tt></td>
-      <td><a href="http://download.gna.org/relax/relax-1.2.12.src.tar.bz2.sig" title="relax GPG signature">signature</a></td>
-      <td>4265898</td>
+      <td><a href="http://download.gna.org/relax/relax-1.2.13.src.tar.bz2" title="relax">relax-1.2.13.src.tar.bz2</a></td>
+      <td><tt><small>eb7fb16d07cc48542723364fad9a508e</small></tt></td>
+      <td><a href="http://download.gna.org/relax/relax-1.2.13.src.tar.bz2.sig" title="relax GPG signature">signature</a></td>
+      <td>4285488</td>
     </tr>
 
     <tr><td>Zip file</td></tr>
     <tr>
-      <td><a href="http://download.gna.org/relax/relax-1.2.12.src.zip" title="relax">relax-1.2.12.src.zip</a></td>
-      <td><tt><small>13e4a07fd89d18161c3c9ea30d388bf2</small></tt></td>
-      <td><a href="http://download.gna.org/relax/relax-1.2.12.src.zip.sig" title="relax GPG signature">signature</a></td>
-      <td>4537636</td>
+      <td><a href="http://download.gna.org/relax/relax-1.2.13.src.zip" title="relax">relax-1.2.13.src.zip</a></td>
+      <td><tt><small>64f464160857d4e9e00ff520e130686f</small></tt></td>
+      <td><a href="http://download.gna.org/relax/relax-1.2.13.src.zip.sig" title="relax GPG signature">signature</a></td>
+      <td>4564801</td>
     </tr>
   </tbody>
 </table>
@@ -240,6 +240,26 @@
       <td><strong>GPG signature</strong></td>
       <td><strong>File size (bytes)</strong></td>
     </tr>
+    <tr><td><em>Stable 1.2 line</em></td></tr>
+    <tr>
+      <td><a href="http://download.gna.org/relax/relax-1.2.13.GNU-Linux.x86_64.tar.bz2" title="relax">relax-1.2.13.GNU-Linux.x86_64.tar.bz2</a></td>
+      <td><tt><small>946367dd9cc9696ffe0b579dafd6256f</small></tt></td>
+      <td><a href="http://download.gna.org/relax/relax-1.2.13.GNU-Linux.x86_64.tar.bz2.sig" title="relax GPG signature">signature</a></td>
+      <td>4291587</td>
+    </tr>
+    <tr>
+      <td><a href="http://download.gna.org/relax/relax-1.2.13.src.tar.bz2" title="relax">relax-1.2.13.src.tar.bz2</a></td>
+      <td><tt><small>eb7fb16d07cc48542723364fad9a508e</small></tt></td>
+      <td><a href="http://download.gna.org/relax/relax-1.2.13.src.tar.bz2.sig" title="relax GPG signature">signature</a></td>
+      <td>4285488</td>
+    </tr>
+    <tr>
+      <td><a href="http://download.gna.org/relax/relax-1.2.13.src.zip" title="relax">relax-1.2.13.src.zip</a></td>
+      <td><tt><small>64f464160857d4e9e00ff520e130686f</small></tt></td>
+      <td><a href="http://download.gna.org/relax/relax-1.2.13.src.zip.sig" title="relax GPG signature">signature</a></td>
+      <td>4564801</td>
+    </tr>
+
     <tr><td><em>Unstable 1.3 development line</em></td></tr>
     <tr>
       <td><a href="http://download.gna.org/relax/relax-1.3.0.GNU-Linux.i686.tar.bz2" title="relax">relax-1.3.0.GNU-Linux.i686.tar.bz2</a></td>
@@ -266,37 +286,6 @@
       <td>4735624</td>
     </tr>
 
-    <tr><td><em>Stable 1.2 line</em></td></tr>
-    <!--<tr>
-      <td><a href="http://download.gna.org/relax/relax-1.2.11.GNU-Linux.i686.tar.bz2" title="relax">relax-1.2.11.GNU-Linux.i686.tar.bz2</a></td>
-      <td><tt><small>87fc5dbebc87911393d124fb36c9e52f</small></tt></td>
-      <td><a href="http://download.gna.org/relax/relax-1.2.11.GNU-Linux.i686.tar.bz2.sig" title="relax GPG signature">signature</a></td>
-      <td>4263999</td>
-    </tr>-->
-    <tr>
-      <td><a href="http://download.gna.org/relax/relax-1.2.12.GNU-Linux.x86_64.tar.bz2" title="relax">relax-1.2.12.GNU-Linux.x86_64.tar.bz2</a></td>
-      <td><tt><small>da77dc1594bdbec2493cf47ad5987bf3</small></tt></td>
-      <td><a href="http://download.gna.org/relax/relax-1.2.12.GNU-Linux.x86_64.tar.bz2.sig" title="relax GPG signature">signature</a></td>
-      <td>4272262</td>
-    </tr>
-    <tr>
-      <td><a href="http://download.gna.org/relax/relax-1.2.12.Win32.zip" title="relax">relax-1.2.12.Win32.zip</a></td>
-      <td><tt><small>41a0068d786921a52b1421a1dc84c5e2</small></tt></td>
-      <td><a href="http://download.gna.org/relax/relax-1.2.12.Win32.zip.sig" title="relax GPG signature">signature</a></td>
-      <td>4520570</td>
-    </tr>
-    <tr>
-      <td><a href="http://download.gna.org/relax/relax-1.2.12.src.tar.bz2" title="relax">relax-1.2.12.src.tar.bz2</a></td>
-      <td><tt><small>dab798ceecf95f0ca8807d70d744ef9a</small></tt></td>
-      <td><a href="http://download.gna.org/relax/relax-1.2.12.src.tar.bz2.sig" title="relax GPG signature">signature</a></td>
-      <td>4265898</td>
-    </tr>
-    <tr>
-      <td><a href="http://download.gna.org/relax/relax-1.2.12.src.zip" title="relax">relax-1.2.12.src.zip</a></td>
-      <td><tt><small>13e4a07fd89d18161c3c9ea30d388bf2</small></tt></td>
-      <td><a href="http://download.gna.org/relax/relax-1.2.12.src.zip.sig" title="relax GPG signature">signature</a></td>
-      <td>4537636</td>
-    </tr>
   </tbody>
 </table>
   </div>
@@ -379,6 +368,26 @@
       <td><strong>MD5 checksum</strong></td>
       <td><strong>GPG signature</strong></td>
       <td><strong>File size (bytes)</strong></td>
+    </tr>
+
+    <tr><td><em>Version 1.2.13</em></td></tr>
+    <tr>
+      <td><a href="http://download.gna.org/relax/relax-1.2.13.GNU-Linux.x86_64.tar.bz2" title="relax">relax-1.2.13.GNU-Linux.x86_64.tar.bz2</a></td>
+      <td><tt><small>946367dd9cc9696ffe0b579dafd6256f</small></tt></td>
+      <td><a href="http://download.gna.org/relax/relax-1.2.13.GNU-Linux.x86_64.tar.bz2.sig" title="relax GPG signature">signature</a></td>
+      <td>4291587</td>
+    </tr>
+    <tr>
+      <td><a href="http://download.gna.org/relax/relax-1.2.13.src.tar.bz2" title="relax">relax-1.2.13.src.tar.bz2</a></td>
+      <td><tt><small>eb7fb16d07cc48542723364fad9a508e</small></tt></td>
+      <td><a href="http://download.gna.org/relax/relax-1.2.13.src.tar.bz2.sig" title="relax GPG signature">signature</a></td>
+      <td>4285488</td>
+    </tr>
+    <tr>
+      <td><a href="http://download.gna.org/relax/relax-1.2.13.src.zip" title="relax">relax-1.2.13.src.zip</a></td>
+      <td><tt><small>64f464160857d4e9e00ff520e130686f</small></tt></td>
+      <td><a href="http://download.gna.org/relax/relax-1.2.13.src.zip.sig" title="relax GPG signature">signature</a></td>
+      <td>4564801</td>
     </tr>
 
     <tr><td><em>Version 1.2.12</em></td></tr>
