Updated the download page for relax 1.2.14.

--- a/download.html
+++ b/download.html
@@ -71,7 +71,7 @@
     <div class="main_h2">
       <h2>General information</h2>
 
-      <p>The current stable release is relax version 1.2.13.</p>
+      <p>The current stable release is relax version 1.2.14.</p>
 
       <p>relax binaries have been pre-compiled for a number of computer architectures.  However if binaries for your system do not exist, please download the source release (the compilation of binaries is not a pre-requesite for using relax).  Note that some binary distribution files may not correspond to the most up to date version of relax.  If so, please download the up-to-date source release instead.  If you would like to contribute binary packages for your specific architecture, please read the 'Open source infrastructure' chapter of the relax manual for details.</p>
 
@@ -95,16 +95,16 @@
       <td><strong>File size (bytes)</strong></td>
     </tr>
     <tr>
-      <td><a href="http://download.gna.org/relax/relax-1.2.13.GNU-Linux.i686.tar.bz2" title="relax">relax-1.2.13.GNU-Linux.i686.tar.bz2</a></td>
-      <td><tt><small>97a1608e5a37a88e41eb590f97f0c670</small></tt></td>
-      <td><a href="http://download.gna.org/relax/relax-1.2.13.GNU-Linux.i686.tar.bz2.sig" title="relax GPG signature">signature</a></td>
-      <td>4286422</td>
+      <td><a href="http://download.gna.org/relax/relax-1.2.14.GNU-Linux.i686.tar.bz2" title="relax">relax-1.2.14.GNU-Linux.i686.tar.bz2</a></td>
+      <td><tt><small>002c43e5009ad38d1ac5109a7044c947</small></tt></td>
+      <td><a href="http://download.gna.org/relax/relax-1.2.14.GNU-Linux.i686.tar.bz2.sig" title="relax GPG signature">signature</a></td>
+      <td>4319669</td>
     </tr>
     <tr>
-      <td><a href="http://download.gna.org/relax/relax-1.2.13.GNU-Linux.x86_64.tar.bz2" title="relax">relax-1.2.13.GNU-Linux.x86_64.tar.bz2</a></td>
-      <td><tt><small>946367dd9cc9696ffe0b579dafd6256f</small></tt></td>
-      <td><a href="http://download.gna.org/relax/relax-1.2.13.GNU-Linux.x86_64.tar.bz2.sig" title="relax GPG signature">signature</a></td>
-      <td>4291587</td>
+      <td><a href="http://download.gna.org/relax/relax-1.2.14.GNU-Linux.x86_64.tar.bz2" title="relax">relax-1.2.14.GNU-Linux.x86_64.tar.bz2</a></td>
+      <td><tt><small>67b79e6a2dfda74f844b87ea0d3bda76</small></tt></td>
+      <td><a href="http://download.gna.org/relax/relax-1.2.14.GNU-Linux.x86_64.tar.bz2.sig" title="relax GPG signature">signature</a></td>
+      <td>4316598</td>
     </tr>
   </tbody>
 </table>
@@ -134,10 +134,10 @@
       <td><strong>File size (bytes)</strong></td>
     </tr>
     <tr>
-      <td><a href="http://download.gna.org/relax/relax-1.2.13.Win32.zip" title="relax">relax-1.2.13.Win32.zip</a></td>
-      <td><tt><small>f039199ae96a7cf18bafe41609ada156</small></tt></td>
-      <td><a href="http://download.gna.org/relax/relax-1.2.13.Win32.zip.sig" title="relax GPG signature">signature</a></td>
-      <td>4553500</td>
+      <td><a href="http://download.gna.org/relax/relax-1.2.14.Win32.zip" title="relax">relax-1.2.14.Win32.zip</a></td>
+      <td><tt><small>6f2d3ee98521957c640a435760ca5d40</small></tt></td>
+      <td><a href="http://download.gna.org/relax/relax-1.2.14.Win32.zip.sig" title="relax GPG signature">signature</a></td>
+      <td>4638800</td>
     </tr>
   </tbody>
 </table>
@@ -188,18 +188,18 @@
     </tr>
     <tr><td>Bzip2 compressed TAR file</td></tr>
     <tr>
-      <td><a href="http://download.gna.org/relax/relax-1.2.13.src.tar.bz2" title="relax">relax-1.2.13.src.tar.bz2</a></td>
-      <td><tt><small>eb7fb16d07cc48542723364fad9a508e</small></tt></td>
-      <td><a href="http://download.gna.org/relax/relax-1.2.13.src.tar.bz2.sig" title="relax GPG signature">signature</a></td>
-      <td>4285488</td>
+      <td><a href="http://download.gna.org/relax/relax-1.2.14.src.tar.bz2" title="relax">relax-1.2.14.src.tar.bz2</a></td>
+      <td><tt><small>90a6d1ec563c68a5e08a4db769fcc325</small></tt></td>
+      <td><a href="http://download.gna.org/relax/relax-1.2.14.src.tar.bz2.sig" title="relax GPG signature">signature</a></td>
+      <td>4310834</td>
     </tr>
 
     <tr><td>Zip file</td></tr>
     <tr>
-      <td><a href="http://download.gna.org/relax/relax-1.2.13.src.zip" title="relax">relax-1.2.13.src.zip</a></td>
-      <td><tt><small>64f464160857d4e9e00ff520e130686f</small></tt></td>
-      <td><a href="http://download.gna.org/relax/relax-1.2.13.src.zip.sig" title="relax GPG signature">signature</a></td>
-      <td>4564801</td>
+      <td><a href="http://download.gna.org/relax/relax-1.2.14.src.zip" title="relax">relax-1.2.14.src.zip</a></td>
+      <td><tt><small>4f0e768bc23d2c895387c87010818e98</small></tt></td>
+      <td><a href="http://download.gna.org/relax/relax-1.2.14.src.zip.sig" title="relax GPG signature">signature</a></td>
+      <td>4597884</td>
     </tr>
   </tbody>
 </table>
@@ -242,34 +242,34 @@
     </tr>
     <tr><td><em>Stable 1.2 line</em></td></tr>
     <tr>
-      <td><a href="http://download.gna.org/relax/relax-1.2.13.GNU-Linux.i686.tar.bz2" title="relax">relax-1.2.13.GNU-Linux.i686.tar.bz2</a></td>
-      <td><tt><small>97a1608e5a37a88e41eb590f97f0c670</small></tt></td>
-      <td><a href="http://download.gna.org/relax/relax-1.2.13.GNU-Linux.i686.tar.bz2.sig" title="relax GPG signature">signature</a></td>
-      <td>4286422</td>
+      <td><a href="http://download.gna.org/relax/relax-1.2.14.GNU-Linux.i686.tar.bz2" title="relax">relax-1.2.14.GNU-Linux.i686.tar.bz2</a></td>
+      <td><tt><small>002c43e5009ad38d1ac5109a7044c947</small></tt></td>
+      <td><a href="http://download.gna.org/relax/relax-1.2.14.GNU-Linux.i686.tar.bz2.sig" title="relax GPG signature">signature</a></td>
+      <td>4319669</td>
     </tr>
     <tr>
-      <td><a href="http://download.gna.org/relax/relax-1.2.13.GNU-Linux.x86_64.tar.bz2" title="relax">relax-1.2.13.GNU-Linux.x86_64.tar.bz2</a></td>
-      <td><tt><small>946367dd9cc9696ffe0b579dafd6256f</small></tt></td>
-      <td><a href="http://download.gna.org/relax/relax-1.2.13.GNU-Linux.x86_64.tar.bz2.sig" title="relax GPG signature">signature</a></td>
-      <td>4291587</td>
+      <td><a href="http://download.gna.org/relax/relax-1.2.14.GNU-Linux.x86_64.tar.bz2" title="relax">relax-1.2.14.GNU-Linux.x86_64.tar.bz2</a></td>
+      <td><tt><small>67b79e6a2dfda74f844b87ea0d3bda76</small></tt></td>
+      <td><a href="http://download.gna.org/relax/relax-1.2.14.GNU-Linux.x86_64.tar.bz2.sig" title="relax GPG signature">signature</a></td>
+      <td>4316598</td>
     </tr>
     <tr>
-      <td><a href="http://download.gna.org/relax/relax-1.2.13.Win32.zip" title="relax">relax-1.2.13.Win32.zip</a></td>
-      <td><tt><small>f039199ae96a7cf18bafe41609ada156</small></tt></td>
-      <td><a href="http://download.gna.org/relax/relax-1.2.13.Win32.zip.sig" title="relax GPG signature">signature</a></td>
-      <td>4553500</td>
+      <td><a href="http://download.gna.org/relax/relax-1.2.14.Win32.zip" title="relax">relax-1.2.14.Win32.zip</a></td>
+      <td><tt><small>6f2d3ee98521957c640a435760ca5d40</small></tt></td>
+      <td><a href="http://download.gna.org/relax/relax-1.2.14.Win32.zip.sig" title="relax GPG signature">signature</a></td>
+      <td>4638800</td>
     </tr>
     <tr>
-      <td><a href="http://download.gna.org/relax/relax-1.2.13.src.tar.bz2" title="relax">relax-1.2.13.src.tar.bz2</a></td>
-      <td><tt><small>eb7fb16d07cc48542723364fad9a508e</small></tt></td>
-      <td><a href="http://download.gna.org/relax/relax-1.2.13.src.tar.bz2.sig" title="relax GPG signature">signature</a></td>
-      <td>4285488</td>
+      <td><a href="http://download.gna.org/relax/relax-1.2.14.src.tar.bz2" title="relax">relax-1.2.14.src.tar.bz2</a></td>
+      <td><tt><small>90a6d1ec563c68a5e08a4db769fcc325</small></tt></td>
+      <td><a href="http://download.gna.org/relax/relax-1.2.14.src.tar.bz2.sig" title="relax GPG signature">signature</a></td>
+      <td>4310834</td>
     </tr>
     <tr>
-      <td><a href="http://download.gna.org/relax/relax-1.2.13.src.zip" title="relax">relax-1.2.13.src.zip</a></td>
-      <td><tt><small>64f464160857d4e9e00ff520e130686f</small></tt></td>
-      <td><a href="http://download.gna.org/relax/relax-1.2.13.src.zip.sig" title="relax GPG signature">signature</a></td>
-      <td>4564801</td>
+      <td><a href="http://download.gna.org/relax/relax-1.2.14.src.zip" title="relax">relax-1.2.14.src.zip</a></td>
+      <td><tt><small>4f0e768bc23d2c895387c87010818e98</small></tt></td>
+      <td><a href="http://download.gna.org/relax/relax-1.2.14.src.zip.sig" title="relax GPG signature">signature</a></td>
+      <td>4597884</td>
     </tr>
 
     <tr><td><em>Unstable 1.3 development line</em></td></tr>
@@ -380,6 +380,38 @@
       <td><strong>MD5 checksum</strong></td>
       <td><strong>GPG signature</strong></td>
       <td><strong>File size (bytes)</strong></td>
+    </tr>
+
+    <tr><td><em>Version 1.2.14</em></td></tr>
+    <tr>
+      <td><a href="http://download.gna.org/relax/relax-1.2.14.GNU-Linux.i686.tar.bz2" title="relax">relax-1.2.14.GNU-Linux.i686.tar.bz2</a></td>
+      <td><tt><small>002c43e5009ad38d1ac5109a7044c947</small></tt></td>
+      <td><a href="http://download.gna.org/relax/relax-1.2.14.GNU-Linux.i686.tar.bz2.sig" title="relax GPG signature">signature</a></td>
+      <td>4319669</td>
+    </tr>
+    <tr>
+      <td><a href="http://download.gna.org/relax/relax-1.2.14.GNU-Linux.x86_64.tar.bz2" title="relax">relax-1.2.14.GNU-Linux.x86_64.tar.bz2</a></td>
+      <td><tt><small>67b79e6a2dfda74f844b87ea0d3bda76</small></tt></td>
+      <td><a href="http://download.gna.org/relax/relax-1.2.14.GNU-Linux.x86_64.tar.bz2.sig" title="relax GPG signature">signature</a></td>
+      <td>4316598</td>
+    </tr>
+    <tr>
+      <td><a href="http://download.gna.org/relax/relax-1.2.14.Win32.zip" title="relax">relax-1.2.14.Win32.zip</a></td>
+      <td><tt><small>6f2d3ee98521957c640a435760ca5d40</small></tt></td>
+      <td><a href="http://download.gna.org/relax/relax-1.2.14.Win32.zip.sig" title="relax GPG signature">signature</a></td>
+      <td>4638800</td>
+    </tr>
+    <tr>
+      <td><a href="http://download.gna.org/relax/relax-1.2.14.src.tar.bz2" title="relax">relax-1.2.14.src.tar.bz2</a></td>
+      <td><tt><small>90a6d1ec563c68a5e08a4db769fcc325</small></tt></td>
+      <td><a href="http://download.gna.org/relax/relax-1.2.14.src.tar.bz2.sig" title="relax GPG signature">signature</a></td>
+      <td>4310834</td>
+    </tr>
+    <tr>
+      <td><a href="http://download.gna.org/relax/relax-1.2.14.src.zip" title="relax">relax-1.2.14.src.zip</a></td>
+      <td><tt><small>4f0e768bc23d2c895387c87010818e98</small></tt></td>
+      <td><a href="http://download.gna.org/relax/relax-1.2.14.src.zip.sig" title="relax GPG signature">signature</a></td>
+      <td>4597884</td>
     </tr>
 
     <tr><td><em>Version 1.2.13</em></td></tr>
