Updated the installation instructions for Mac OS X to mention Jack Howarth's Fink packages.
This is in response to the post at https://mail.gna.org/public/relax-users/2008-08/msg00004.html
(Message-id: <20080814163206.GA17755@bromo.msbb.uc.edu>).

--- a/download.html
+++ b/download.html
@@ -160,7 +160,15 @@
 <!-- Mac OS X -->
     <div class="main_h2">
       <h2>Mac OS X</h2>
-        <p>There are currently no pre-compiled binary releases for Mac OS X.  To use relax under OS X please download the source package below.  Unfortunately this will mean that, unless compiled using a C compiler, the exponential relaxation curve fitting component of relax will be unavailable.  If you use relax on OS X and would like to help the relax project by providing pre-compiled binary packages, please contact the <a href="communication.html#relax-devel">relax-devel mailing list</a>.</p>
+        <p>Pre-compiled binary releases of certain relax versions are available for Mac OS X within the <a href="http://www.finkproject.org/">Fink project</a>.  These can be installed for Python 2.4 with the command:</p>
+
+        <p><em>> fink install relax-py24</em></p>
+
+        <p>or for Python 2.5 with:</p>
+
+        <p><em>> fink install relax-py25</em></p>
+
+        <p>The relax releases packaged within Fink can been browsed <a href="http://pdb.finkproject.org/pdb/browse.php?name=relax">here</a>.  If the desired version is not available, please download the relevent source package below.</p>
 
         <h3>Dependencies</h3>
           <ul class="main_ul">
