--- a/download.html
+++ b/download.html
@@ -63,7 +63,7 @@
 <div class="main">
 <!-- Current release -->
   <div class="main_box">
-    <h1>Current stable release</h1>
+    <h1>Current releases</h1>
 
 
 
@@ -71,9 +71,13 @@
     <div class="main_h2">
       <h2>General information</h2>
 
+      <p>The current development release is relax version 1.3.1.</p>
+
       <p>The current stable release is relax version 1.2.14.</p>
 
-      <p>relax binaries have been pre-compiled for a number of computer architectures.  However if binaries for your system do not exist, please download the source release (the compilation of binaries is not a pre-requesite for using relax).  Note that some binary distribution files may not correspond to the most up to date version of relax.  If so, please download the up-to-date source release instead.  If you would like to contribute binary packages for your specific architecture, please read the 'Open source infrastructure' chapter of the relax manual for details.</p>
+      <p>For most analysis types, relaxation curve fitting, model-free analysis, etc., the development release is adequate and recommended.  If there are problems, a bug report can be <a href="https://gna.org/bugs/?group=relax">lodged</a> or the stable releases used.</p>
+
+      <p>relax binaries have been pre-compiled for a number of computer architectures.  These are based on Python 2.5 but can work with Python 2.4 on certain operating systems and certain architectures.  However if not, or if binaries for your system do not exist, please download the source release (the compilation of binaries is not a pre-requesite for using relax).  Note that some binary distribution files may not correspond to the most up to date version of relax.  If so, please download the up-to-date source release instead.  If you would like to contribute binary packages for your specific architecture, please read the 'Open source infrastructure' chapter of the relax manual for details.</p>
 
       <p>For details about the relax GPG signatures and their usage, see the Security section at the end of this page.</p>
     </div>
@@ -93,6 +97,18 @@
       <td><strong>MD5 checksum</strong></td>
       <td><strong>GPG signature</strong></td>
       <td><strong>File size (bytes)</strong></td>
+    </tr>
+    <tr>
+      <td><a href="http://download.gna.org/relax/relax-1.3.1.GNU-Linux.i686.tar.bz2" title="relax">relax-1.3.1.GNU-Linux.i686.tar.bz2</a></td>
+      <td><tt><small>dcf4b3ec6e2682db2d7c6463ebc3aff0</small></tt></td>
+      <td><a href="http://download.gna.org/relax/relax-1.3.1.GNU-Linux.i686.tar.bz2.sig" title="relax GPG signature">signature</a></td>
+      <td>4682274</td>
+    </tr>
+    <tr>
+      <td><a href="http://download.gna.org/relax/relax-1.3.1.GNU-Linux.x86_64.tar.bz2" title="relax">relax-1.3.1.GNU-Linux.x86_64.tar.bz2</a></td>
+      <td><tt><small>8a1ddbf8ff099a8274cbc8fade8fdc02</small></tt></td>
+      <td><a href="http://download.gna.org/relax/relax-1.3.1.GNU-Linux.x86_64.tar.bz2.sig" title="relax GPG signature">signature</a></td>
+      <td>4680365</td>
     </tr>
     <tr>
       <td><a href="http://download.gna.org/relax/relax-1.2.14.GNU-Linux.i686.tar.bz2" title="relax">relax-1.2.14.GNU-Linux.i686.tar.bz2</a></td>
@@ -116,6 +132,12 @@
             <li><a href="http://numpy.scipy.org">Numeric</a> >= 21: <a href="http://sourceforge.net/project/showfiles.php?group_id=1369&amp;package_id=1351">Sourceforge Numeric download page</a></li>
             <li><a href="http://starship.python.net/~hinsen/ScientificPython/">Scientific Python</a> >= 2.2: <a href="http://sourcesup.cru.fr/frs/download.php/686/ScientificPython-2.4.11.tar.gz">ScientificPython-2.4.11.tar.gz</a></li>
           </ul>
+
+          <p>For the 1.3 releases, the following dependency is also needed.</p>
+          <ul class="main_ul">
+            <li><a href="https://gna.org/projects/minfx/">minfx</a> >= 1.0.1: <a  href="http://download.gna.org/minfx/minfx-1.0.1.tar.bz2">minfx-1.0.1.tar.bz2</a></li>
+          </ul>
+
     </div>
 
 
@@ -134,6 +156,12 @@
       <td><strong>File size (bytes)</strong></td>
     </tr>
     <tr>
+      <td><a href="http://download.gna.org/relax/relax-1.3.1.Win32.zip" title="relax">relax-1.3.1.Win32.zip</a></td>
+      <td><tt><small>c617d92d24c6d48332b504d534f07b70</small></tt></td>
+      <td><a href="http://download.gna.org/relax/relax-1.3.1.Win32.zip.sig" title="relax GPG signature">signature</a></td>
+      <td>5149644</td>
+    </tr>
+    <tr>
       <td><a href="http://download.gna.org/relax/relax-1.2.14.Win32.zip" title="relax">relax-1.2.14.Win32.zip</a></td>
       <td><tt><small>6f2d3ee98521957c640a435760ca5d40</small></tt></td>
       <td><a href="http://download.gna.org/relax/relax-1.2.14.Win32.zip.sig" title="relax GPG signature">signature</a></td>
@@ -150,6 +178,12 @@
             <li><a href="http://projects.scipy.org/ipython/ipython/wiki/PyReadline/Intro">pyreadline</a>: <a href="http://ipython.scipy.org/dist/pyreadline-1.3.win32.exe">pyreadline-1.3.win32.exe</a></li>
             <li><a href="http://starship.python.net/crew/theller/ctypes/">ctypes</a> (pyreadline dependency): <a href="http://prdownloads.sourceforge.net/ctypes/ctypes-1.0.0.win32-py2.4.exe?download">ctypes-1.0.0.win32-py2.4.exe</a></li>
           </ul>
+
+          <p>For the 1.3 releases, the following dependency is also needed.</p>
+          <ul class="main_ul">
+            <li><a href="https://gna.org/projects/minfx/">minfx</a> >= 1.0.1: <a  href="http://download.gna.org/minfx/minfx-1.0.1.zip">minfx-1.0.1.zip</a></li>
+          </ul>
+
 
         <h3>System path</h3>
          <p>To execute relax, both the relax and Python installation directories will need to be added to the system path.  For MS Windows the instructions for modifying the system path are given <a href="windows_devel.html#path">here</a>.</p>
@@ -176,6 +210,12 @@
             <li><a href="http://numpy.scipy.org">Numeric</a> >= 21: <a href="http://dirac.cnrs-orleans.fr/MacPackages/Numeric-23.7-py2.4-macosx10.3.zip">Numeric-23.7-py2.4-macosx10.3.zip</a></li>
             <li><a href="http://starship.python.net/~hinsen/ScientificPython/">Scientific Python</a> >= 2.2: <a href="http://dirac.cnrs-orleans.fr/MacPackages/ScientificPython-2.4.9-py2.4-macosx10.3.zip">ScientificPython-2.4.9-py2.4-macosx10.3.zip</a></li>
           </ul>
+          <p>For the 1.3 releases, the following dependency is also needed.</p>
+          <ul class="main_ul">
+            <li><a href="https://gna.org/projects/minfx/">minfx</a> >= 1.0.1: <a  href="http://download.gna.org/minfx/minfx-1.0.1.tar.gz">minfx-1.0.1.tar.gz</a></li>
+          </ul>
+
+
     </div>
 
 
@@ -196,6 +236,12 @@
     </tr>
     <tr><td>Bzip2 compressed TAR file</td></tr>
     <tr>
+      <td><a href="http://download.gna.org/relax/relax-1.3.1.src.tar.bz2" title="relax">relax-1.3.1.src.tar.bz2</a></td>
+      <td><tt><small>b60aa0313986802a6429f82e3c892851</small></tt></td>
+      <td><a href="http://download.gna.org/relax/relax-1.3.1.src.tar.bz2.sig" title="relax GPG signature">signature</a></td>
+      <td>4674818</td>
+    </tr>
+    <tr>
       <td><a href="http://download.gna.org/relax/relax-1.2.14.src.tar.bz2" title="relax">relax-1.2.14.src.tar.bz2</a></td>
       <td><tt><small>90a6d1ec563c68a5e08a4db769fcc325</small></tt></td>
       <td><a href="http://download.gna.org/relax/relax-1.2.14.src.tar.bz2.sig" title="relax GPG signature">signature</a></td>
@@ -203,6 +249,12 @@
     </tr>
 
     <tr><td>Zip file</td></tr>
+    <tr>
+      <td><a href="http://download.gna.org/relax/relax-1.3.1.src.zip" title="relax">relax-1.3.1.zip</a></td>
+      <td><tt><small>a6ea1a691beeea251fc94896513b28a3</small></tt></td>
+      <td><a href="http://download.gna.org/relax/relax-1.3.1.src.zip.sig" title="relax GPG signature">signature</a></td>
+      <td>5098404</td>
+    </tr>
     <tr>
       <td><a href="http://download.gna.org/relax/relax-1.2.14.src.zip" title="relax">relax-1.2.14.src.zip</a></td>
       <td><tt><small>4f0e768bc23d2c895387c87010818e98</small></tt></td>
@@ -219,6 +271,11 @@
             <li><a href="http://numpy.scipy.org">Numeric</a> >= 21: <a href="http://sourceforge.net/project/showfiles.php?group_id=1369&amp;package_id=1351">Sourceforge Numeric download page</a></li>
 
             <li><a href="http://starship.python.net/~hinsen/ScientificPython/">Scientific Python</a> >= 2.2: <a href="http://sourcesup.cru.fr/frs/download.php/686/ScientificPython-2.4.11.tar.gz">ScientificPython-2.4.11.tar.gz</a></li>
+          </ul>
+
+          <p>For the 1.3 releases, the following dependency is also needed.</p>
+          <ul class="main_ul">
+            <li><a href="https://gna.org/projects/minfx/">minfx</a> >= 1.0.1: <a  href="http://download.gna.org/minfx/minfx-1.0.1.tar.bz2">minfx-1.0.1.tar.bz2</a></li>
           </ul>
 
          <h3 id="compilation">Compilation</h3>
@@ -248,6 +305,38 @@
       <td><strong>GPG signature</strong></td>
       <td><strong>File size (bytes)</strong></td>
     </tr>
+    <tr><td><em>1.3 development line</em></td></tr>
+    <tr>
+      <td><a href="http://download.gna.org/relax/relax-1.3.1.GNU-Linux.i686.tar.bz2" title="relax">relax-1.3.1.GNU-Linux.i686.tar.bz2</a></td>
+      <td><tt><small>dcf4b3ec6e2682db2d7c6463ebc3aff0</small></tt></td>
+      <td><a href="http://download.gna.org/relax/relax-1.3.1.GNU-Linux.i686.tar.bz2.sig" title="relax GPG signature">signature</a></td>
+      <td>4682274</td>
+    </tr>
+    <tr>
+      <td><a href="http://download.gna.org/relax/relax-1.3.1.GNU-Linux.x86_64.tar.bz2" title="relax">relax-1.3.1.GNU-Linux.x86_64.tar.bz2</a></td>
+      <td><tt><small>8a1ddbf8ff099a8274cbc8fade8fdc02</small></tt></td>
+      <td><a href="http://download.gna.org/relax/relax-1.3.1.GNU-Linux.x86_64.tar.bz2.sig" title="relax GPG signature">signature</a></td>
+      <td>4680365</td>
+    </tr>
+    <tr>
+      <td><a href="http://download.gna.org/relax/relax-1.3.1.Win32.zip" title="relax">relax-1.3.1.Win32.zip</a></td>
+      <td><tt><small>c617d92d24c6d48332b504d534f07b70</small></tt></td>
+      <td><a href="http://download.gna.org/relax/relax-1.3.1.Win32.zip.sig" title="relax GPG signature">signature</a></td>
+      <td>5149644</td>
+    </tr>
+    <tr>
+      <td><a href="http://download.gna.org/relax/relax-1.3.1.src.tar.bz2" title="relax">relax-1.3.1.src.tar.bz2</a></td>
+      <td><tt><small>b60aa0313986802a6429f82e3c892851</small></tt></td>
+      <td><a href="http://download.gna.org/relax/relax-1.3.1.src.tar.bz2.sig" title="relax GPG signature">signature</a></td>
+      <td>4674818</td>
+    </tr>
+    <tr>
+      <td><a href="http://download.gna.org/relax/relax-1.3.1.src.zip" title="relax">relax-1.3.1.zip</a></td>
+      <td><tt><small>a6ea1a691beeea251fc94896513b28a3</small></tt></td>
+      <td><a href="http://download.gna.org/relax/relax-1.3.1.src.zip.sig" title="relax GPG signature">signature</a></td>
+      <td>5098404</td>
+    </tr>
+
     <tr><td><em>Stable 1.2 line</em></td></tr>
     <tr>
       <td><a href="http://download.gna.org/relax/relax-1.2.14.GNU-Linux.i686.tar.bz2" title="relax">relax-1.2.14.GNU-Linux.i686.tar.bz2</a></td>
@@ -278,32 +367,6 @@
       <td><tt><small>4f0e768bc23d2c895387c87010818e98</small></tt></td>
       <td><a href="http://download.gna.org/relax/relax-1.2.14.src.zip.sig" title="relax GPG signature">signature</a></td>
       <td>4597884</td>
-    </tr>
-
-    <tr><td><em>Unstable 1.3 development line</em></td></tr>
-    <tr>
-      <td><a href="http://download.gna.org/relax/relax-1.3.0.GNU-Linux.i686.tar.bz2" title="relax">relax-1.3.0.GNU-Linux.i686.tar.bz2</a></td>
-      <td><tt><small>1a9b5104e512af0edf8affb95a6d2d94</small></tt></td>
-      <td><a href="http://download.gna.org/relax/relax-1.3.0.GNU-Linux.i686.tar.bz2.sig" title="relax GPG signature">signature</a></td>
-      <td>4445951</td>
-    </tr>
-    <tr>
-      <td><a href="http://download.gna.org/relax/relax-1.3.0.Win32.zip" title="relax">relax-1.3.0.Win32.zip</a></td>
-      <td><tt><small>b788b38fecee772fe758897a80563205</small></tt></td>
-      <td><a href="http://download.gna.org/relax/relax-1.3.0.Win32.zip.sig" title="relax GPG signature">signature</a></td>
-      <td>4708018</td>
-    </tr>
-    <tr>
-      <td><a href="http://download.gna.org/relax/relax-1.3.0.src.tar.bz2" title="relax">relax-1.3.0.src.tar.bz2</a></td>
-      <td><tt><small>ae89221310d0c2ce84f5235d847f1001</small></tt></td>
-      <td><a href="http://download.gna.org/relax/relax-1.3.0.src.tar.bz2.sig" title="relax GPG signature">signature</a></td>
-      <td>4439939</td>
-    </tr>
-    <tr>
-      <td><a href="http://download.gna.org/relax/relax-1.3.0.src.zip" title="relax">relax-1.3.0.src.zip</a></td>
-      <td><tt><small>32475228dd4ed201f7dd462f6a001063</small></tt></td>
-      <td><a href="http://download.gna.org/relax/relax-1.3.0.src.zip.sig" title="relax GPG signature">signature</a></td>
-      <td>4735624</td>
     </tr>
 
   </tbody>
@@ -350,6 +413,39 @@
       <td><strong>GPG signature</strong></td>
       <td><strong>File size (bytes)</strong></td>
     </tr>
+
+    <tr><td><em>Version 1.3.1</em></td></tr>
+    <tr>
+      <td><a href="http://download.gna.org/relax/relax-1.3.1.GNU-Linux.i686.tar.bz2" title="relax">relax-1.3.1.GNU-Linux.i686.tar.bz2</a></td>
+      <td><tt><small>dcf4b3ec6e2682db2d7c6463ebc3aff0</small></tt></td>
+      <td><a href="http://download.gna.org/relax/relax-1.3.1.GNU-Linux.i686.tar.bz2.sig" title="relax GPG signature">signature</a></td>
+      <td>4682274</td>
+    </tr>
+    <tr>
+      <td><a href="http://download.gna.org/relax/relax-1.3.1.GNU-Linux.x86_64.tar.bz2" title="relax">relax-1.3.1.GNU-Linux.x86_64.tar.bz2</a></td>
+      <td><tt><small>8a1ddbf8ff099a8274cbc8fade8fdc02</small></tt></td>
+      <td><a href="http://download.gna.org/relax/relax-1.3.1.GNU-Linux.x86_64.tar.bz2.sig" title="relax GPG signature">signature</a></td>
+      <td>4680365</td>
+    </tr>
+    <tr>
+      <td><a href="http://download.gna.org/relax/relax-1.3.1.Win32.zip" title="relax">relax-1.3.1.Win32.zip</a></td>
+      <td><tt><small>c617d92d24c6d48332b504d534f07b70</small></tt></td>
+      <td><a href="http://download.gna.org/relax/relax-1.3.1.Win32.zip.sig" title="relax GPG signature">signature</a></td>
+      <td>5149644</td>
+    </tr>
+    <tr>
+      <td><a href="http://download.gna.org/relax/relax-1.3.1.src.tar.bz2" title="relax">relax-1.3.1.src.tar.bz2</a></td>
+      <td><tt><small>b60aa0313986802a6429f82e3c892851</small></tt></td>
+      <td><a href="http://download.gna.org/relax/relax-1.3.1.src.tar.bz2.sig" title="relax GPG signature">signature</a></td>
+      <td>4674818</td>
+    </tr>
+    <tr>
+      <td><a href="http://download.gna.org/relax/relax-1.3.1.src.zip" title="relax">relax-1.3.1.zip</a></td>
+      <td><tt><small>a6ea1a691beeea251fc94896513b28a3</small></tt></td>
+      <td><a href="http://download.gna.org/relax/relax-1.3.1.src.zip.sig" title="relax GPG signature">signature</a></td>
+      <td>5098404</td>
+    </tr>
+
     <tr><td><em>Version 1.3.0</em></td></tr>
     <tr>
       <td><a href="http://download.gna.org/relax/relax-1.3.0.GNU-Linux.i686.tar.bz2" title="relax">relax-1.3.0.GNU-Linux.i686.tar.bz2</a></td>
