--- a/docs.html
+++ b/docs.html
@@ -87,11 +87,21 @@
   <div class="main_h2">
     <h2>The manual</h2>
 
-    <p>Finally, the best source of information is the current version of the <a href="http://download.gna.org/relax/manual/1.2/relax.pdf" title="The relax 1.2 manual">the relax manual for the 1.2 stable line</a> which comes with relax and is formatted as a PDF.  Also available is the <a href="http://download.gna.org/relax/manual/1.3/relax.pdf" title="The relax 1.3 manual">relax manual for the unstable 1.3 development line</a>.</p>
+    <p>Finally, the best source of information is the current version of the the relax manual which comes with relax.  These can be download from here</p>
 
-    <p>The manual has also been converted into a <a href="manual/1.2/relax.html" title="The relax 1.2 manual (HTML version)">HTML version for the 1.2 stable line</a> which can be browsed on-line.  This version is, however, inferior in quality in comparison to the original PDF.  The HTML version for the unstable 1.3 development line is located <a href="manual/1.3/relax.html" title="The relax 1.3 manual (HTML version)">here</a>.</p>
+    <ul class="main_ul">
+      <li><a href="http://download.gna.org/relax/manual/1.3/relax.pdf">PDF manual for relax version 1.3.x.</a></li>
+      <li><a href="http://download.gna.org/relax/manual/1.2/relax.pdf">PDF manual for relax version 1.2.x.</a></li>
+    </ul>
 
-      <p>You can also search the HTML versions of the manuals using the Google search tool.</p>
+    <p>The manual has also been converted into a HTML version which can be browsed on-line.  This version is, however, inferior in quality in comparison to the original PDF.</p>
+
+    <ul class="main_ul">
+      <li><a href="manual/1.3/relax.html">HTML manual for relax version 1.3.x.</a></li>
+      <li><a href="manual/1.2/relax.html">HTML manual for relax version 1.2.x.</a></li>
+    </ul>
+
+    <p>You can also search the HTML versions of the manuals using the Google search tool.</p>
 
     <!-- SiteSearch Google -->
     <form method=GET action="http://www.google.com/search">
