--- a/download.html
+++ b/download.html
@@ -403,7 +403,7 @@
 
       <p>Descriptions of these releases are available from the <a href='http://gna.org/projects/relax'>relax news page</a>.  These files can all be found on the <a href="http://download.gna.org/relax">relax download site</a>.</p>
 
-      <h2>Unstable 1.3 development line</h2>
+      <h2>1.3 development line</h2>
 
 <table cellspacing="10">
   <tbody>
